# modorganizer-game_bethesda

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
src/creation/: CMakeLists.txt  creationgameplugins.cpp
src/gamebryo/: CMakeLists.txt  dummybsa.cpp  game_gamebryo_en.ts  gamebryobsainvalidation.cpp  gamebryodataarchives.cpp  gamebryodataarchives.h  gamebryogameplugins.cpp  gamebryogameplugins.h  gamebryolocalsavegames.cpp  gamebryomoddatachecker.cpp  gamebryomoddatacontent.cpp  gamebryosavegame.cpp  gamebryosavegame.h  gamebryosavegameinfo.cpp  gamebryosavegameinfowidget.cpp  gamebryoscriptextender.h  gamebryounmanagedmods.cpp  gamegamebryo.cpp  gamegamebryo.h  utils.h  vdf_parser.h
src/gamebryo/linux/: gamegamebryo_linux.cpp  gamegamebryoplugins_linux.cpp  util.cpp  util.h  windowsFunctionWrapper.h  windowsTypes.h
src/gamebryo/win32/: gamegamebryo_win32.cpp  gamegamebryoplugins_win32.cpp
src/games/enderal/: CMakeLists.txt  enderalbsainvalidation.cpp  enderalbsainvalidation.h  enderaldataarchives.cpp  enderalgameplugins.cpp  enderallocalsavegames.cpp  enderalmoddatachecker.h  enderalsavegame.cpp  enderalsavegame.h  enderalscriptextender.cpp  game_enderal_en.ts  gameenderal.cpp
src/games/enderalse/: CMakeLists.txt  enderalsedataarchives.cpp  enderalsegameplugins.cpp  enderalselocalsavegames.cpp  enderalsemoddatachecker.h  enderalsesavegame.cpp  enderalsesavegame.h  enderalsescriptextender.cpp  enderalsescriptextender.h  enderalseunmanagedmods.cpp  game_enderalse_en.ts  gameenderalse.cpp
src/games/fallout3/: CMakeLists.txt  fallout3bsainvalidation.cpp  fallout3bsainvalidation.h  fallout3dataarchives.cpp  fallout3moddatachecker.h  fallout3savegame.cpp  fallout3savegame.h  fallout3scriptextender.cpp  game_fallout3_en.ts  gamefallout3.cpp
src/games/fallout3/linux/: gamefallout3_linux.cpp
src/games/fallout3/win32/: gamefallout3_win32.cpp
src/games/fallout4/: CMakeLists.txt  fallout4bsainvalidation.cpp  fallout4bsainvalidation.h  fallout4dataarchives.cpp  fallout4moddatachecker.h  fallout4moddatacontent.h  fallout4savegame.cpp  fallout4savegame.h  fallout4scriptextender.cpp  fallout4unmanagedmods.cpp  game_fallout4_en.ts  gamefallout4.cpp  gamefallout4.h
src/games/fallout4london/: CMakeLists.txt  fo4londonbsainvalidation.cpp  fo4londonbsainvalidation.h  fo4londondataarchives.cpp  fo4londonmoddatachecker.h  fo4londonmoddatacontent.h  fo4londonsavegame.cpp  fo4londonsavegame.h  fo4londonscriptextender.cpp  fo4londonunmanagedmods.cpp  game_fo4london_en.ts  gamefo4london.cpp  gamefo4london.h
src/games/fallout4london/linux/: gamefo4london_linux.cpp
src/games/fallout4london/win32/: gamefo4london_win32.cpp
src/games/fallout4vr/: CMakeLists.txt  fallout4vrdataarchives.cpp  fallout4vrgameplugins.cpp  fallout4vrmoddatachecker.h  fallout4vrmoddatacontent.h  fallout4vrsavegame.cpp  fallout4vrsavegame.h  fallout4vrscriptextender.cpp  fallout4vrunmanagedmods.cpp  game_fallout4vr_en.ts  gamefallout4vr.cpp
src/games/fallout76/: CMakeLists.txt  fallout76dataarchives.cpp  fallout76moddatachecker.h  fallout76moddatacontent.h  fallout76savegame.cpp  fallout76savegame.h  fallout76scriptextender.cpp  fallout76unmanagedmods.cpp  game_fallout76_en.ts  gamefallout76.cpp
src/games/falloutnv/: CMakeLists.txt  falloutnvbsainvalidation.cpp  falloutnvbsainvalidation.h  falloutnvdataarchives.cpp  falloutnvmoddatachecker.h  falloutnvsavegame.cpp  falloutnvsavegame.h  falloutnvscriptextender.cpp  game_falloutnv_en.ts  gamefalloutnv.cpp
src/games/falloutnv/linux/: gamefalloutnv_linux.cpp
src/games/falloutnv/win32/: gamefalloutnv_win32.cpp
src/games/morrowind/: CMakeLists.txt  game_morrowind_en.ts  gamemorrowind.cpp  morrowindbsainvalidation.cpp  morrowindbsainvalidation.h  morrowinddataarchives.cpp  morrowindgameplugins.cpp  morrowindlocalsavegames.cpp  morrowindmoddatachecker.h  morrowindsavegame.cpp  morrowindsavegame.h  morrowindsavegameinfowidget.cpp
src/games/morrowind/linux/: gamemorrowind_linux.cpp
src/games/morrowind/win32/: gamemorrowind_win32.cpp
src/games/nehrim/: CMakeLists.txt  game_nehrim_en.ts  gamenehrim.cpp  nehrimbsainvalidation.cpp  nehrimbsainvalidation.h  nehrimdataarchives.cpp  nehrimmoddatachecker.cpp  nehrimmoddatachecker.h  nehrimsavegame.cpp  nehrimsavegame.h  nehrimscriptextender.cpp
src/games/nehrim/linux/: gamenehrim_linux.cpp
src/games/nehrim/win32/: gamenehrim_win32.cpp
src/games/oblivion/: CMakeLists.txt  game_oblivion_en.ts  gameoblivion.cpp  oblivionbsainvalidation.cpp  oblivionbsainvalidation.h  obliviondataarchives.cpp  oblivionsavegame.cpp  (+4 more)
src/games/skyrimse/: CMakeLists.txt  game_skyrimse_en.ts  gameskyrimse.cpp  skyrimsedataarchives.cpp  skyrimsemoddatachecker.h  skyrimsesavegame.cpp  skyrimsescriptextender.cpp  skyrimseunmanagedmods.cpp
src/games/skyrimse/linux/: gameskyrimse_linux.cpp
src/games/skyrimse/win32/: gameskyrimse_win32.cpp
src/games/skyrimvr/: CMakeLists.txt  game_skyrimvr_en.ts  gameskyrimvr.cpp  skyrimvrdataarchives.cpp  skyrimvrgameplugins.cpp  skyrimvrmoddatachecker.h  skyrimvrsavegame.cpp  skyrimvrsavegame.h  skyrimvrscriptextender.cpp  skyrimvrunmanagedmods.cpp
src/games/skyrimvr/linux/: gameskyrimvr_linux.cpp
src/games/skyrimvr/win32/: gameskyrimvr_win32.cpp
src/games/starfield/: CMakeLists.txt  game_starfield_en.ts  gamestarfield.cpp  gamestarfield.h  starfieldbsainvalidation.cpp  starfieldbsainvalidation.h  starfielddataarchives.cpp  starfieldmoddatachecker.h  starfieldmoddatacontent.h  starfieldsavegame.cpp  starfieldsavegame.h  starfieldscriptextender.cpp  starfieldunmanagedmods.cpp
src/games/starfield/linux/: gamestarfield_linux.cpp
src/games/starfield/win32/: gamestarfield_win32.cpp
src/games/ttw/: CMakeLists.txt  falloutttwbsainvalidation.cpp  falloutttwbsainvalidation.h  falloutttwdataarchives.cpp  falloutttwmoddatachecker.h  falloutttwsavegame.cpp  falloutttwsavegame.h  falloutttwscriptextender.cpp  game_ttw_en.ts  gamefalloutttw.cpp
src/games/ttw/linux/: gamefalloutttw_linux.cpp
src/games/ttw/win32/: gamefalloutttw_win32.cpp
(+24 files in other folders)
